sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:18: error: missing argument list for method || in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$bar$bar _` or `$bar$bar(_)` instead of `$bar$bar`.
  } while(gap > 1 || term = true)
                  ^