sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var gap = getValueCount()
  var term = false
  
  do{
    if(gap > 1){
      gap = (gap.toDouble / 1.3).toInt
    }
    var i = 0
    
    while(i+gap < getValueCount()){
      if(isSmaller(i+1,i)){
        swap(i,i+1)
        i += 1
      }
    }
  } while(gap > 1 || term = true)
}